--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-
-
-    <script src="main-assignment.js"></script>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col"><a href="./before_class/index.html" target="_blank" rel="noopener noreferrer">Assignment 1 ( Before class ) </a></div>
+                <div class="col"><a href="./after_class/index.html" target="_blank" rel="noopener noreferrer">Assignment 2 ( After class ) </a></div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
